--- a/Form.html
+++ b/Form.html
@@ -1,18 +1,175 @@
 <!DOCTYPE html>
-<head>
-    <title>FORM  IN HTML</title>
-</head>
 <html>
-    <form>
- <label for="Fnmae">First Name</label>
- <input type="text" id="Fnmae" name="Fnmae" ><br>
- <input type="checkbox"><br>
- <input type="button"><br>
- <input type ="date"><br>
- <input type="month"><br>
- <input type="file"><br>
- <input type="radio"><br>
- <input type="submit"><br>
- <input type="select">
+
+<head>
+    <title>Form</title>
+    <style>
+        /* table,th,td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            } */
+
+        style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f6f8;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        form {
+            background-color: #fff;
+            padding: 20px 30px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+            width: 500px;
+        }
+
+        fieldset {
+            border: 2px solid #4CAF50;
+            border-radius: 8px;
+            padding: 20px;
+        }
+
+        legend {
+            font-size: 1.4em;
+            font-weight: bold;
+            color: #4CAF50;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        td {
+            padding: 10px;
+            vertical-align: middle;
+        }
+
+        input[type="text"],
+        input[type="password"],
+        select {
+            width: 95%;
+            padding: 8px;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            outline: none;
+        }
+
+        input[type="text"]:focus,
+        input[type="password"]:focus,
+        select:focus {
+            border-color: #4CAF50;
+            box-shadow: 0px 0px 5px rgba(76, 175, 80, 0.5);
+        }
+
+        input[type="radio"],
+        input[type="checkbox"] {
+            transform: scale(1.2);
+            margin-right: 5px;
+        }
+
+        button {
+            background-color: #4CAF50;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 6px;
+            color: white;
+            cursor: pointer;
+            font-size: 1em;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        button[type="reset"] {
+            background-color: #f44336;
+        }
+
+        button[type="reset"]:hover {
+            background-color: #e53935;
+        }
+    </style>
+   
+</head>
+
+<body>
+    <form action="submit_form" method="post" autocomplete="on" novalidate>
+        <fieldset>
+
+            <legend>Registration Form</legend>
+
+            <table style="width: 80%;">
+
+                <tr>
+                    <td><label for="Username">Username:</label></td>
+                    <td colspan="2"><input type="text" name="Username" id="Username"></td>
+                </tr>
+
+                <tr>
+                    <td><label for=" Password ">Password:</label></td>
+                    <td colspan="2"><input type=" password " name=" Password " id="Password"></td>
+
+                </tr>
+
+                <tr>
+                    <td>
+                        <label>Gender:</label>
+                    </td>
+                    <td>
+                        <input type="radio" name="Gender" value="Male" id="Male">
+                        <label for="Male">Male </label>
+                       
+                    </td>
+                    <td>
+                       <input type="radio" name="Gender" value="Female" id="Female">
+                        <label for="Female">Female</label>
+                       
+                    </td>
+
+
+                </tr>
+
+                <tr>
+                    <td> <label>Hobbies:</label></td>
+                    <td >
+                        <input type="checkbox" name="Hobbies" value="Sport" id="Sport">
+                        <label for="Sport">Sport</label>
+                    </td>
+
+                    <td>
+                        <input type="checkbox" name="Hobbies" value="Reading" id="Reading">
+                        <label for="Reading">Reading</label>
+                    </td>
+
+                </tr>
+
+                <tr>
+                    <td "><label for="car">Choose car:</label></td>
+                    <td colspan="2">
+
+                        <select id="car" name="Car" size="2">
+                            <option value="Volvo">Volvo</option>
+                            <option value="Saab">Saab</option>
+                            <option value="Toyota">Toyota</option>
+                            <option value="Honda">Honda</option>
+                    </td>
+
+                </tr>
+
+                <tr>
+                    <td ><button type="submit">Register</button></td>
+                    <td><button type="reset">Reset</button></td>
+                </tr>
+
+        </fieldset>
     </form>
+    </table>
+</body>
+
 </html>
